Improve Room entity validation and status handling